--- a/index.css
+++ b/index.css
@@ -22,6 +22,11 @@ hr {
     margin: 2rem 0;
 }
 
+p {
+    margin-left: 30px;
+    margin-bottom: 5px;
+}
+
 h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
@@ -36,7 +41,11 @@ h3 {
     margin-top: 1.5rem;
     font-size: 1.75rem;
     margin-bottom: 0.5rem;
-    margin-left: 2%;
+    margin-left: 30px;
+}
+
+ol li {
+    list-style-type: none;
 }
 
 .image {
@@ -46,6 +55,25 @@ h3 {
     border-radius: 8px;
     margin-left: 2%;
     max-width: 96%;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 100%;
+    overflow: hidden;
+    height: 30%;
+}
+
+.fleximg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    overflow: hidden;
+    height: 100%;
 }
 
 /* Optional: Remove default link styles */
